@@ -15,6 +15,7 @@ install_command=pip install --pre {opts} {packages}
 deps = pytest 
        devpi-server>=1.1
        mock
+       sphinx
 
 commands = py.test --junitxml={envname}-junit.xml {posargs} 
 
